--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,19 @@
     "build": "rimraf ./dist && tsc"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^18.7.13",
+    "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   },
   "dependencies": {
-    "rimraf": "^3.0.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "rimraf": "^3.0.2",
+    "socket.io": "^4.5.1",
+    "uuid": "^8.3.2"
   }
 }
